<?xml version="1.0" encoding="utf-8"?>
<com.hdf.autotouch.widget.WindowInsetConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_EFEFEF"
    tools:context=".ui.withdrawcoin.WithdrawCoinActivity">

    <include layout="@layout/include_top_bar" />

    <TextView
        android:id="@+id/tv_bind_address"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/bar_height"
        android:drawableLeft="@drawable/ic_bind_address"
        android:drawablePadding="@dimen/size_8"
        android:gravity="center"
        android:paddingLeft="@dimen/size_16"
        android:paddingRight="@dimen/size_16"
        android:text="@string/bind_address"
        android:textColor="@color/light_black1"
        android:textSize="@dimen/font_14"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintRight_toRightOf="@+id/toolbar"
        app:layout_constraintTop_toTopOf="@+id/toolbar" />

    <TextView
        android:id="@+id/tv_unbind_address"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/bar_height"
        android:gravity="center"
        android:paddingLeft="@dimen/size_16"
        android:paddingRight="@dimen/size_16"
        android:text="@string/unbind_address"
        android:textColor="@color/light_black1"
        android:textSize="@dimen/font_14"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintRight_toRightOf="@+id/toolbar"
        app:layout_constraintTop_toTopOf="@+id/toolbar" />

    <TextView
        android:id="@+id/tv_current_balance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/size_16"
        android:layout_marginTop="@dimen/size_20"
        android:layout_marginRight="@dimen/size_16"
        android:background="@drawable/bg_solid_white_4"
        android:paddingLeft="@dimen/size_24"
        android:paddingTop="@dimen/size_16"
        android:paddingRight="@dimen/size_24"
        android:paddingBottom="@dimen/size_16"
        android:text="@string/current_balance"
        android:textColor="@color/text_color_2"
        android:textSize="@dimen/font_12"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <View
        android:id="@+id/view_bg"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/size_16"
        android:layout_marginRight="@dimen/size_16"
        android:background="@drawable/bg_solid_white_4"
        app:layout_constraintBottom_toBottomOf="@id/view_block"
        app:layout_constraintTop_toTopOf="@+id/tv_withdraw_coin_address" />


    <TextView
        android:id="@+id/tv_withdraw_coin_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/size_24"
        android:layout_marginTop="@dimen/size_24"
        android:paddingTop="@dimen/size_20"
        android:text="@string/withdraw_coin_address"
        android:textColor="@color/light_black1"
        android:textSize="@dimen/font_14"
        app:layout_constraintLeft_toLeftOf="@+id/tv_current_balance"
        app:layout_constraintTop_toBottomOf="@+id/tv_current_balance" />

    <EditText
        android:id="@+id/et_wallet_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/size_24"
        android:layout_marginTop="@dimen/size_16"
        android:layout_marginRight="@dimen/size_24"
        android:background="@drawable/bg_solid_464d6f_4"
        android:hint="@string/binding_wallet_address"
        android:inputType="textEmailAddress"
        android:padding="@dimen/size_12"
        android:singleLine="true"
        android:textColor="@color/light_black1"
        android:textColorHint="@color/text_color_hint"
        android:textSize="@dimen/font_12"
        app:layout_constraintLeft_toLeftOf="@+id/tv_current_balance"
        app:layout_constraintRight_toRightOf="@+id/tv_current_balance"
        app:layout_constraintTop_toBottomOf="@+id/tv_withdraw_coin_address" />

    <TextView
        android:id="@+id/tv_withdraw_coin_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/size_24"
        android:layout_marginTop="@dimen/size_20"
        android:text="@string/withdraw_coin_amount"
        android:textColor="@color/light_black1"
        android:textSize="@dimen/font_14"
        app:layout_constraintLeft_toLeftOf="@+id/tv_current_balance"
        app:layout_constraintTop_toBottomOf="@+id/et_wallet_address" />

    <EditText
        android:id="@+id/et_withdraw_coin_amount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/size_24"
        android:layout_marginTop="@dimen/size_16"
        android:layout_marginRight="@dimen/size_24"
        android:background="@drawable/bg_solid_464d6f_4"
        android:digits="@string/et_type_decimal"
        android:hint="@string/input_withdraw_coin_amount"
        android:inputType="numberDecimal"
        android:paddingLeft="@dimen/size_12"
        android:paddingTop="@dimen/size_12"
        android:paddingRight="@dimen/size_72"
        android:paddingBottom="@dimen/size_12"
        android:singleLine="true"
        android:textColor="@color/light_black1"
        android:textColorHint="@color/text_color_hint"
        android:textSize="@dimen/font_12"
        app:layout_constraintLeft_toLeftOf="@+id/tv_current_balance"
        app:layout_constraintRight_toRightOf="@+id/tv_current_balance"
        app:layout_constraintTop_toBottomOf="@+id/tv_withdraw_coin_amount" />

    <TextView
        android:id="@+id/tv_service_charge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_16"
        android:text="@string/service_charge"
        android:textColor="@color/app_color"
        android:textSize="@dimen/font_12"
        app:layout_constraintLeft_toLeftOf="@+id/et_withdraw_coin_amount"
        app:layout_constraintTop_toBottomOf="@+id/et_withdraw_coin_amount" />

    <TextView
        android:layout_width="@dimen/size_72"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/usdt"
        android:textColor="@color/light_black1"
        app:layout_constraintBottom_toBottomOf="@+id/et_withdraw_coin_amount"
        app:layout_constraintRight_toRightOf="@+id/et_withdraw_coin_amount"
        app:layout_constraintTop_toTopOf="@+id/et_withdraw_coin_amount" />

    <TextView
        android:id="@+id/tv_add_remark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_24"
        android:text="@string/add_remark"
        android:textColor="@color/light_black1"
        android:textSize="@dimen/font_14"
        android:visibility="invisible"
        app:layout_constraintLeft_toLeftOf="@+id/tv_current_balance"
        app:layout_constraintTop_toBottomOf="@+id/et_withdraw_coin_amount" />

    <EditText
        android:id="@+id/et_remark"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_8"
        android:background="@drawable/bg_solid_464d6f_4"
        android:gravity="top"
        android:hint="@string/input_remark"
        android:lines="3"
        android:padding="@dimen/size_12"
        android:textColor="@color/text_color_1"
        android:textColorHint="@color/text_color_hint"
        android:textSize="@dimen/font_12"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="@+id/tv_current_balance"
        app:layout_constraintRight_toRightOf="@+id/tv_current_balance"
        app:layout_constraintTop_toBottomOf="@+id/tv_add_remark" />

    <View
        android:id="@+id/view_block"
        android:layout_width="0dp"
        android:layout_height="@dimen/size_20"
        app:layout_constraintTop_toBottomOf="@+id/et_remark" />

    <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/size_20"
        android:layout_marginRight="@dimen/size_20"
        android:layout_marginBottom="@dimen/size_20"
        android:gravity="center"
        android:paddingTop="@dimen/size_12"
        android:paddingBottom="@dimen/size_12"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textSize="@dimen/font_16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:qmui_backgroundColor="@color/s_btn_app_color_1"
        app:qmui_isRadiusAdjustBounds="true"
        app:qmui_radius="@dimen/size_4" />
</com.hdf.autotouch.widget.WindowInsetConstraintLayout>