<?xml version="1.0" encoding="utf-8"?>
<com.hdf.autotouch.widget.WindowInsetConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    tools:context=".ui.address.AddAddressActivity">

    <include layout="@layout/include_top_bar" />


    <TextView
        android:id="@+id/tv_save_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/size_16"
        android:padding="@dimen/size_8"
        android:text="@string/save"
        android:textColor="@color/orange"
        android:textSize="@dimen/font_14"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintRight_toRightOf="@+id/toolbar"
        app:layout_constraintTop_toTopOf="@+id/toolbar" />


    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/tv_deliver_explain_content"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/tv_consignee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/size_24"
        android:text="@string/consignee1"
        android:textColor="@color/light_black1"
        android:textSize="@dimen/font_14"
        app:layout_constraintBaseline_toBaselineOf="@+id/et_consignee"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/et_consignee"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@null"
        android:hint="@string/input_consignee"
        android:paddingLeft="@dimen/size_24"
        android:paddingTop="@dimen/size_16"
        android:paddingRight="@dimen/size_24"
        android:paddingBottom="@dimen/size_16"
        android:singleLine="true"
        android:textColor="@color/light_black1"
        android:textSize="@dimen/font_14"
        app:layout_constraintLeft_toRightOf="@+id/tv_phone"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <View
        android:id="@+id/view_divider0"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_1"
        android:layout_marginLeft="@dimen/size_24"
        android:layout_marginRight="@dimen/size_24"
        android:background="@color/medium_gray"
        app:layout_constraintTop_toBottomOf="@id/et_consignee" />

    <TextView
        android:id="@+id/tv_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/size_24"
        android:text="@string/phone"
        android:textColor="@color/light_black1"
        android:textSize="@dimen/font_14"
        app:layout_constraintBaseline_toBaselineOf="@+id/et_phone"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/et_phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@null"
        android:digits="@string/et_type_number"
        android:gravity="center_vertical"
        android:hint="@string/input_phone"
        android:inputType="phone"
        android:paddingLeft="@dimen/size_12"
        android:paddingTop="@dimen/size_16"
        android:paddingRight="@dimen/size_24"
        android:paddingBottom="@dimen/size_16"
        android:singleLine="true"
        android:textColor="@color/light_black1"
        android:textSize="@dimen/font_14"
        app:layout_constraintLeft_toRightOf="@+id/tv_phone"
        app:layout_constraintRight_toLeftOf="@+id/tv_area_code"
        app:layout_constraintTop_toBottomOf="@+id/view_divider0" />

    <TextView
        android:id="@+id/tv_area_code"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginRight="@dimen/size_24"
        android:drawableRight="@drawable/ic_arrow_right"
        android:drawablePadding="@dimen/size_4"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/size_24"
        android:paddingRight="@dimen/size_12"
        android:text="@string/default_area_code"
        android:textColor="@color/light_black1"
        android:textSize="@dimen/font_14"
        app:layout_constraintBottom_toBottomOf="@+id/et_phone"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/et_phone" />


    <View
        android:id="@+id/view_divider1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_1"
        android:layout_marginLeft="@dimen/size_24"
        android:layout_marginRight="@dimen/size_24"
        android:background="@color/medium_gray"
        app:layout_constraintTop_toBottomOf="@id/et_phone" />

    <TextView
        android:id="@+id/tv_deliver_explain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/size_24"
        android:text="@string/deliver_explain"
        android:textColor="@color/light_black1"
        android:textSize="@dimen/font_14"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_deliver_explain_content"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/tv_deliver_explain_content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/size_24"
        android:paddingTop="@dimen/size_16"
        android:paddingRight="@dimen/size_24"
        android:paddingBottom="@dimen/size_16"
        android:text="@string/deliver_explain_content"
        android:textColor="@color/light_black1"
        android:textSize="@dimen/font_14"
        app:layout_constraintLeft_toRightOf="@+id/tv_phone"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_divider1" />

    <TextView
        android:id="@+id/tv_del_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_20"
        android:background="@color/white"
        android:gravity="center"
        android:paddingTop="@dimen/size_12"
        android:paddingBottom="@dimen/size_12"
        android:text="删除收货地址"
        android:textColor="@color/orange"
        android:textSize="@dimen/font_16"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_deliver_explain_content" />
</com.hdf.autotouch.widget.WindowInsetConstraintLayout>